# iot-ocre-renode

./: README.md  network.resc
getting-started/samples/control_loop/: CMakeLists.txt  build.yaml  main.c
getting-started/samples/sensor_polling/: CMakeLists.txt  build.yaml  main.c
getting-started/samples/sensor_polling/image/: index.json  oci-layout
ocre/boards/: litex_vexriscv.conf
